--- a/src/main/resources/assets/nightautoconfig/lang/zh_cn.json
+++ b/src/main/resources/assets/nightautoconfig/lang/zh_cn.json
@@ -1,4 +1,3 @@
 {
-  "modmenu.nameTranslation.modid"       : "",
-  "modmenu.descriptionTranslation.modid": ""
+  "modmenu.descriptionTranslation.nightautoconfig": "序列化整个世界！Night Config与Auto Config的热血组合技。"
 }
