--- a/src/main/resources/assets/nightautoconfig/lang/zh_cn.json
+++ b/src/main/resources/assets/nightautoconfig/lang/zh_cn.json
@@ -1,3 +1,3 @@
 {
-  "modmenu.descriptionTranslation.nightautoconfig": "序列化整个世界！Night Config与Auto Config的热血组合技。"
+  "fml.menu.mods.info.description.nightautoconfig": "序列化整个世界！Night Config与Auto Config的热血组合技。"
 }
